--- a/config.conf
+++ b/config.conf
@@ -1,21 +1,30 @@
 [info]
-#开始在一起的日期，格式参考 2022-06-24
-start_date=2022-06-24
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city=焉耆
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=腾冲
+city2=成都
+city3=哈密
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
+birthday=11-02
 #你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+my_birthday=09-09
+you_birthday=02-01
+weather=晴天
+weather2=晴天
+weather3=晴天
+min_temperature=10℃
+max_temperature=28℃
+min_temperature2=18℃
+max_temperature2=22℃
+min_temperature3=11℃
+max_temperature3=30℃
 #以下为微信测试号的参数，在申请时会显示
-app_id=wxbc471cb
-app_secret=c4149ff570
+app_id=wxe1d5f578d03c0c7c
+app_secret=8e6b83b0d70c5285e15971ffe319f3e2
 #消息模板ID，在微信测试号中添加模板会自动生成ID
-template_id=o_H3x859-mrYPv2ynphC
+K-_0wQZtUyfSiisAFbiyBCinTN7RGjyPg0Ic7__m3E8
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
-user_id=oB3
+user_id=on3Vg522K4Q3aohRwyNYd9sVu9IY
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
 #user_id=****,***,*****
 
